<resources>
    <string name="app_name">Safarea</string>
    <string name="text_forgot_password">Lupa Kata sandi?</string>
    <string name="text_username">Nama Pengguna</string>
    <string name="text_password">Kata Sandi</string>
    <string name="text_sign_in">Masuk Akun</string>
    <string name="text_pengaturan">Pengaturan</string>
    <string name="text_simpan">Simpan</string>
    <string name="field_text_name">Nama Lengkap</string>
    <string name="text_stock_available">%1$d Stok Tersedia</string>
    <string name="text_profit_price">%1$s Keuntungan</string>
    <string name="text_change_password">Ubah Kata Sandi</string>
    <string name="text_change_address">Ubah Alamat</string>
    <string name="text_change_phone">Nomor Telepon</string>
    <string name="text_change_email">Alamat Email</string>
    <string name="text_store_name">Nama Toko</string>
    <string name="text_buyer_lists">Daftar Pembeli</string>
    <string name="text_edit_buyer">Ubah Pembeli</string>
    <string name="text_add_buyer">Tambah Pembeli</string>
    <string name="text_add_transaction">Tambah Pesanan</string>
    <string name="text_transaction_list">Daftar Transaksi</string>
    <string name="text_delete_stock">Hapus Stok</string>
    <string name="text_stock_product">Stok Barang</string>
    <string name="text_alert_stock_delete_title">Yakin Akan Menghapus Stok?</string>
    <string name="text_alert_stock_delete_desc">Silahkan mengembalikan barang jika sudah diambil.</string>
    <string name="text_add_stock">Tambah Stock</string>
    <string name="text_look_stock">Lihat Stok Barang</string>
    <string name="text_accept_goods">Terima Barang</string>
    <string name="text_stock_message_take">Silahkan ambil barang anda di supplier terdekat</string>
    <string name="text_stock_message_send">Supplier akan mengirim barang ke alamat anda. Silahkan konfirmasi penerimaan barang di halaman stok barang</string>
    <string name="text_saving">Menyimpan</string>
    <string name="text_search">Cari</string>
    <string name="text_select_buyer">Pilih Pembeli</string>
    <string name="text_select_product">Pilih Barang</string>
    <string name="text_about_app_header">Tentang Safarea</string>
    <string name="text_share">Bagikan</string>
    <string name="text_copy_store">Salin Link Toko</string>
    <string name="about_app_desc">Aplikasi Safarea merupakan aplikasi kolaborasi antara Supplier dengan Dropshipper yang berbasis Android. Safarea akan Menampilkan katalog milik Supplier untuk memudahkan Dropshipper dalam mengecek stock milik Supplier, Safarea juga dapat menampilkan katalog milik Dropshipper agar bisa dibagikan secara manual atau melalui social media kepada pembeli. Tujuan Safarea ini untuk memudahkan Supplier dan Dropshipper dalam management barang dan data.</string>

    <!-- String transaction -->
    <string name="text_buyer_name">Pemesan : %s</string>
    <string name="label_transaction_number">No. Pesanan : #%s</string>
    <string name="label_no_telp_format">No. Telepon : %s</string>
    <string name="label_price">Rp%s</string>


    <!-- String alert -->
    <string name="alert_signing_in_title">Sedang Masuk</string>
    <string name="alert_getting_supplier_data_title">Sedang Mengambil Data Barang</string>
    <string name="alert_please_wait_message">Silahkan tunggu&#8230;</string>
    <string name="alert_failed_connect_server">Gagal, terjadi kesalahan pada server</string>
    <string name="alert_yes_btn">Ya</string>
    <string name="alert_no_btn">Tidak</string>
    <string name="alert_saving_password">Sedang mengganti password&#8230;</string>
    <string name="alert_success_saving">Sukses menyimpan %s</string>

    <!-- String validation -->
    <string name="validation_required_uname_passwd">Nama pengguna dan Kata Sandi harus di isi.</string>
    <string name="validation_required">%s harus di isi.</string>

    <!-- String drawer menu -->
    <string name="menu_open">Buka</string>
    <string name="menu_close">Tutup</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_sign_out">Keluar</string>
    <string name="menu_about">Tentang</string>
    <string name="menu_supplier">Katalog Pemasok</string>
    <string name="menu_dropshipper">Katalog Dropshipper</string>
    <string name="menu_setting">Pengaturan</string>
    <string name="menu_transaction">Transaksi</string>
    <string name="menu_buyer">Data Pembeli</string>
    <string name="menu_stock">Stok Barang</string>
    <string name="alert_no_transaction">Belum ada transaksi</string>
</resources>
