<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarMenu"
        layout="@layout/toolbar_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMenu">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/lblTransactionNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/label_transaction_number"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lblPemesan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_buyer_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/lblTransactionNumber"
                    app:layout_constraintStart_toStartOf="@+id/lblTransactionNumber"
                    app:layout_constraintTop_toBottomOf="@+id/lblTransactionNumber" />

                <TextView
                    android:id="@+id/lblNotel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_no_telp_format"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/lblPemesan"
                    app:layout_constraintStart_toStartOf="@+id/lblPemesan"
                    app:layout_constraintTop_toBottomOf="@+id/lblPemesan" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblNotel"
                    app:srcCompat="@drawable/sample_product" />

                <TextView
                    android:id="@+id/txtProduct"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Kids Pajama Short Sleeves"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <TextView
                    android:id="@+id/txtHarga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/label_price"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtProduct"
                    app:layout_constraintTop_toBottomOf="@+id/txtProduct" />

                <TextView
                    android:id="@+id/lblQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:text="Quantity : "
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/txtQty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="100"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblQty"
                    app:layout_constraintTop_toTopOf="@+id/lblQty" />

                <TextView
                    android:id="@+id/lblDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Dipesan Pada : "
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/lblQty"
                    app:layout_constraintTop_toBottomOf="@+id/lblQty" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="01/01/2020"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblDate"
                    app:layout_constraintTop_toTopOf="@+id/lblDate" />

                <TextView
                    android:id="@+id/lblDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Deskripsi Pesanan : "
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/lblDate"
                    app:layout_constraintTop_toBottomOf="@+id/lblTotHarga" />

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:lineSpacingExtra="8sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/lblDesc"
                    app:layout_constraintTop_toBottomOf="@+id/lblDesc"
                    tools:text="In ultrices facilisis finibus. Quisque semper nibh eu ultrices lacinia." />

                <TextView
                    android:id="@+id/lblTotHarga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Total Harga : "
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/lblDate"
                    app:layout_constraintTop_toBottomOf="@+id/lblDate" />

                <TextView
                    android:id="@+id/txtTotHarga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="240.000.0"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblTotHarga"
                    app:layout_constraintTop_toTopOf="@+id/lblTotHarga" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>